--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,9 +1,9 @@
 <% layout('layouts/boilerplate') -%>
 
 <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-6">
         <div class="card mb-3">
-            <img src="<%= campgroundID.image %>" class="card-img-top" alt="..." />
+            <img src="<%= campgroundID.image %>" class="card-img-top" alt="An image" />
             <div class="card-body">
                 <h5 class="card-title"><%= campgroundID.title %></h5>
                 <p class="card-text"><%= campgroundID.description %></p>
@@ -22,5 +22,31 @@
                 2 jours
             </div>
         </div>
+    </div>
+    <div class="col-6">
+        <h2>Laisser un commentaire</h2>
+        <form action="/campgrounds/<%= campgroundID._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate> 
+            <div class="mb-3">
+                <label class="form-label" for="customRange">Note</label>
+                <input type="range" name="review[rating]" class="form-range" min="1" max="5" id="customRange">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="body">Commentaire</label>
+                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" placeholder="Votre commentaire" required></textarea>
+                <div class="valid-feedback">Champ rempli</div>
+            </div>
+            <button class="btn btn-success">Ajouter votre commentaire</button>
+        </form>
+        <% for(let review of campgroundID.reviews) { %>
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Note: <%= review.rating %></h5>
+                <p class="card-text">Commentaire: <%= review.body %></p>
+                <form action="/campgrounds/<%= campgroundID._id  %>/reviews/<%= review._id  %>?_method=DELETE" method="POST">
+                    <button class="btn-sm btn btn-danger" type="submit">Supprimer votre commentaire</button>
+                </form>
+            </div>
+        </div>
+        <% } %> 
     </div>
 </div>
