--- a/views/partials/navbars.ejs
+++ b/views/partials/navbars.ejs
@@ -14,9 +14,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link" href="/">Home</a>
-                <a class="nav-link" href="/campgrounds">Campgrounds</a>
-                <a class="nav-link" href="/campgrounds/new">New Campground</a>
+                <a class="nav-link" href="/">Accueil</a>
+                <a class="nav-link" href="/campgrounds">Campings</a>
+                <a class="nav-link" href="/campgrounds/new">Nouveau camping</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+                <% if(!currentUser) { %>
+                    <a class="nav-link" href="/login">Connexion</a>
+                    <a class="nav-link" href="/register">Inscription</a>
+                <% } else { %>
+                    <a class="nav-link" href="/logout">Déconnexion</a>
+                <% } %> 
             </div>
         </div>
     </div>
