--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -10,33 +10,38 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campgroundID.location %></li>
+                <li class="list-group-item">Crée par <b><%= campgroundID.author.username.toUpperCase() %></b></li>
                 <li class="list-group-item"><%= campgroundID.price %>€ /Nuit</li>
             </ul>
-            <div class="card-body">
-                <a href="/campgrounds/<%= campgroundID._id %>/edit" class="card-link btn btn-info">Modifier</a>
-                <form class="d-inline" action="/campgrounds/<%= campgroundID._id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-danger" type="submit">Supprimer</button>
-                </form>
-            </div>
+            <% if(currentUser && campgroundID.author.equals(currentUser._id)) { %>
+                <div class="card-body">
+                    <a href="/campgrounds/<%= campgroundID._id %>/edit" class="card-link btn btn-info">Modifier</a>
+                    <form class="d-inline" action="/campgrounds/<%= campgroundID._id %>?_method=DELETE" method="POST">
+                        <button class="btn btn-danger" type="submit">Supprimer</button>
+                    </form>
+                </div>
+            <% } %> 
             <div class="card-footer text-muted">
                 2 jours
             </div>
         </div>
     </div>
     <div class="col-6">
-        <h2>Laisser un commentaire</h2>
-        <form action="/campgrounds/<%= campgroundID._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate> 
-            <div class="mb-3">
-                <label class="form-label" for="customRange">Note</label>
-                <input type="range" name="review[rating]" class="form-range" min="1" max="5" id="customRange">
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="body">Commentaire</label>
-                <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" placeholder="Votre commentaire" required></textarea>
-                <div class="valid-feedback">Champ rempli</div>
-            </div>
-            <button class="btn btn-success">Ajouter votre commentaire</button>
-        </form>
+        <% if(currentUser) { %>
+            <h2>Laisser un commentaire</h2>
+            <form action="/campgrounds/<%= campgroundID._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate> 
+                <div class="mb-3">
+                    <label class="form-label" for="customRange">Note</label>
+                    <input type="range" name="review[rating]" class="form-range" min="1" max="5" id="customRange">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="body">Commentaire</label>
+                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" placeholder="Votre commentaire" required></textarea>
+                    <div class="valid-feedback">Champ rempli</div>
+                </div>
+                <button class="btn btn-success">Ajouter votre commentaire</button>
+            </form>
+       <% } %>  
         <% for(let review of campgroundID.reviews) { %>
         <div class="card mb-3">
             <div class="card-body">
