--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">Nouveau camping</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
             <div class="mb-3">
                 <label class="form-label" for="title">Titre</label>
                 <input
@@ -27,7 +27,8 @@
                 />
                 <div class="valid-feedback">Champ rempli</div>
             </div>
-            <div class="mb-3">
+            <input type="file" name="image" id="image" multiple>
+            <!-- <div class="mb-3">
                 <label class="form-label" for="image">Image URL</label>
                 <input
                     class="form-control"
@@ -38,7 +39,7 @@
                     required
                 />
                 <div class="valid-feedback">Champ rempli</div>
-            </div>
+            </div> -->
             <div class="mb-3">
                 <label class="form-label" for="price">Prix du camping</label>
                 <div class="input-group">
