--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,15 @@
 <div class="card mb-3">
     <div class="row">
         <div class="col-md-4">
+            <% if(campground.images.length) { %>
             <img src="<%= campground.images[0].url %>" class="img-fluid" alt="" />
+            <% } else { %>
+            <img
+                src="https://res.cloudinary.com/dqr1seyu2/image/upload/v1649935721/YelpCamp/jsya4ezocslht6p27fdi.jpg"
+                class="img-fluid"
+                alt=""
+            />
+            <% } %>
         </div>
     </div>
     <div class="col-md-8">
