--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,27 +1,38 @@
 <% layout('layouts/boilerplate') -%>
-<link rel="stylesheet" href="/css/starability.css">
-<link rel="stylesheet" href="/css/stars.css">
+<link rel="stylesheet" href="/css/starability.css" />
+<link rel="stylesheet" href="/css/stars.css" />
 
 <div class="row">
     <div class="col-6">
+        <div id="map" style="width: 400px; height: 300px"></div>
         <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campgroundID.images.forEach((img, i) => { %>
-                <div class="carousel-item <%= i === 0 ? 'active' : '' %> ">
+                <div class="carousel-item <%= i === 0 ? 'active' : '' %>">
                     <img src="<%= img.url %>" class="d-block w-100" alt="" />
                 </div>
                 <% }) %>
             </div>
             <% if(campgroundID.images.length > 1) { %>
-                <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Précédent</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Suivant</span>
-                </button>    
-            <% } %> 
+            <button
+                class="carousel-control-prev"
+                type="button"
+                data-bs-target="#campgroundCarousel"
+                data-bs-slide="prev"
+            >
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Précédent</span>
+            </button>
+            <button
+                class="carousel-control-next"
+                type="button"
+                data-bs-target="#campgroundCarousel"
+                data-bs-slide="next"
+            >
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Suivant</span>
+            </button>
+            <% } %>
         </div>
         <div class="card mb-3">
             <div class="card-body">
@@ -30,69 +41,136 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item text-muted"><%= campgroundID.location %></li>
-                <li class="list-group-item">Crée par <b><%= campgroundID.author.username.toUpperCase() %></b></li>
+                <li class="list-group-item">
+                    Crée par <b><%= campgroundID.author.username.toUpperCase() %></b>
+                </li>
                 <li class="list-group-item"><%= campgroundID.price %>€ /Nuit</li>
             </ul>
             <% if(currentUser && campgroundID.author.equals(currentUser._id)) { %>
-                <div class="card-body">
-                    <a href="/campgrounds/<%= campgroundID._id %>/edit" class="card-link btn btn-info">Modifier</a>
-                    <form class="d-inline" action="/campgrounds/<%= campgroundID._id %>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger" type="submit">Supprimer</button>
-                    </form>
-                </div>
-            <% } %> 
-            <div class="card-footer text-muted">
-                2 jours
+            <div class="card-body">
+                <a
+                    href="/campgrounds/<%= campgroundID._id %>/edit"
+                    class="card-link btn btn-info"
+                    >Modifier</a
+                >
+                <form
+                    class="d-inline"
+                    action="/campgrounds/<%= campgroundID._id %>?_method=DELETE"
+                    method="POST"
+                >
+                    <button class="btn btn-danger" type="submit">Supprimer</button>
+                </form>
             </div>
+            <% } %>
+            <div class="card-footer text-muted">2 jours</div>
         </div>
     </div>
     <div class="col-6">
         <% if(currentUser) { %>
-            <h2>Laisser un commentaire</h2>
-            <form action="/campgrounds/<%= campgroundID._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate> 
-                <div class="mb-3">
-                    <fieldset class="starability-basic">
-                        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                        <label for="first-rate1" title="Terrible">1 star</label>
-                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                        <label for="first-rate2" title="Not good">2 stars</label>
-                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                        <label for="first-rate3" title="Average">3 stars</label>
-                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                        <label for="first-rate4" title="Very good">4 stars</label>
-                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                        <label for="first-rate5" title="Amazing">5 stars</label>
-                    </fieldset>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="body">Commentaire</label>
-                    <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" placeholder="Votre commentaire" required></textarea>
-                    <div class="valid-feedback">Champ rempli</div>
-                </div>
-                <button class="btn btn-success">Ajouter votre commentaire</button>
-            </form>
-       <% } %>  
-        <% for(let review of campgroundID.reviews) { %>
+        <h2>Laisser un commentaire</h2>
+        <form
+            action="/campgrounds/<%= campgroundID._id %>/reviews"
+            class="mb-3 validated-form"
+            method="POST"
+            novalidate
+        >
+            <div class="mb-3">
+                <fieldset class="starability-basic">
+                    <input
+                        type="radio"
+                        id="no-rate"
+                        class="input-no-rate"
+                        name="review[rating]"
+                        value="1"
+                        checked
+                        aria-label="No rating."
+                    />
+                    <input
+                        type="radio"
+                        id="first-rate1"
+                        name="review[rating]"
+                        value="1"
+                    />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input
+                        type="radio"
+                        id="first-rate2"
+                        name="review[rating]"
+                        value="2"
+                    />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input
+                        type="radio"
+                        id="first-rate3"
+                        name="review[rating]"
+                        value="3"
+                    />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input
+                        type="radio"
+                        id="first-rate4"
+                        name="review[rating]"
+                        value="4"
+                    />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input
+                        type="radio"
+                        id="first-rate5"
+                        name="review[rating]"
+                        value="5"
+                    />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+                </fieldset>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="body">Commentaire</label>
+                <textarea
+                    class="form-control"
+                    name="review[body]"
+                    id="body"
+                    cols="30"
+                    rows="3"
+                    placeholder="Votre commentaire"
+                    required
+                ></textarea>
+                <div class="valid-feedback">Champ rempli</div>
+            </div>
+            <button class="btn btn-success">Ajouter votre commentaire</button>
+        </form>
+        <% } %> <% for(let review of campgroundID.reviews) { %>
         <div class="card mb-3">
             <div class="card-body">
-                <div class='stars-wrapper'>
+                <div class="stars-wrapper">
                     <% for( let i = 0; i < review?.rating; i++ ) { %>
-                        <div class='star-filled'>&#9733;</div>
-                    <% } %>
-                    <% for( let i = 0; i < 5 - review?.rating; i++ ) { %>
-                        <div class='star-empty'>&#9734;</div>
+                    <div class="star-filled">&#9733;</div>
+                    <% } %> <% for( let i = 0; i < 5 - review?.rating; i++ ) { %>
+                    <div class="star-empty">&#9734;</div>
                     <% } %>
                 </div>
-                <h6 class="card-subtitle mb-2 text-muted">posté par <b><%= review.author.username.toUpperCase() %></b> </h6>
+                <h6 class="card-subtitle mb-2 text-muted">
+                    posté par <b><%= review.author.username.toUpperCase() %></b>
+                </h6>
                 <p class="card-text">Commentaire: <%= review.body %></p>
                 <% if(currentUser && review.author.equals(currentUser._id)) { %>
-                <form action="/campgrounds/<%= campgroundID._id  %>/reviews/<%= review._id  %>?_method=DELETE" method="POST">
-                    <button class="btn-sm btn btn-danger" type="submit">Supprimer votre commentaire</button>
+                <form
+                    action="/campgrounds/<%= campgroundID._id  %>/reviews/<%= review._id  %>?_method=DELETE"
+                    method="POST"
+                >
+                    <button class="btn-sm btn btn-danger" type="submit">
+                        Supprimer votre commentaire
+                    </button>
                 </form>
-                <% } %> 
+                <% } %>
             </div>
         </div>
-        <% } %> 
+        <% } %>
     </div>
 </div>
+
+<script defer>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN %>';
+    const campground = '<%-JSON.stringify(campgroundID) %>';
+    const parseCampground = JSON.parse(campground);
+</script>
+
+<script src="/js/showPageMap.js" defer></script>
