--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- BOOTSTRAP -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -16,18 +17,25 @@
             crossorigin="anonymous"
             defer
         ></script>
+        
+        <!-- Validation Formulaire -->
         <script src="/js/validateForms.js" defer></script>
+
+        <!-- MAPBOX -->
+        <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
+        <link
+            href="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.css"
+            rel="stylesheet"
+        />
+
         <title>YelpCamp</title>
     </head>
     <body class="d-flex flex-column vh-100">
         <%- include('../partials/navbars') %>
         <main class="container mt-5">
-            <%- include('../partials/flash') %>
-            <%- body %>
+            <%- include('../partials/flash') %> <%- body %>
         </main>
         <%- include('../partials/footer') %>
-        <script>
-           
-        </script>
+        <script></script>
     </body>
 </html>
