--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,97 +1,117 @@
 <% layout('layouts/boilerplate') -%>
 
 <div class="row">
-    <h1 class="text-center">Modification du camping</h1>
     <div class="col-6 offset-3">
-        <form
-            action="/campgrounds/<%= campgroundID._id %>?_method=PUT"
-            method="POST"
-            novalidate
-            class="validated-form"
-            enctype="multipart/form-data"
-        >
-            <div class="mb-3">
-                <label class="form-label" for="title">Titre</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    name="campground[title]"
-                    id="title"
-                    placeholder="Titre du camping"
-                    required
-                    value="<%= campgroundID.title %>"
-                />
-                <div class="valid-feedback">Champ valide !</div>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="location">Localisation</label>
-                <input
-                    class="form-control"
-                    type="text"
-                    name="campground[location]"
-                    id="title"
-                    placeholder="localisation du camping"
-                    required
-                    value="<%= campgroundID.location %>"
-                />
-                <div class="valid-feedback">Champ valide</div>
-            </div>
-            <div class="mb-3">
-                <label for="image" class="form-label">Ajouter plus d'images</label>
-                <input type="file" class="form-control" id="image" name="image" multiple>
-                <div class="valid-feedback">Champ valide</div>
-            </div>
-            <div class="mb-3">
-                <% campgroundID.images.forEach(function(img, i) { %>
-                    <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
-                    <div class="form-check-inline">
-                        <input type="checkbox" name="deleteImages[]" id="image-<%= i %>" value="<%= img.filename %>"/>
+        <div class="card shadow">
+            <div class="card-body">
+                <h1 class="card-title">Modification du camping</h1>
+                <form
+                    action="/campgrounds/<%= campgroundID._id %>?_method=PUT"
+                    method="POST"
+                    novalidate
+                    class="validated-form"
+                    enctype="multipart/form-data"
+                >
+                    <div class="mb-3">
+                        <label class="form-label" for="title">Titre</label>
+                        <input
+                            class="form-control"
+                            type="text"
+                            name="campground[title]"
+                            id="title"
+                            placeholder="Titre du camping"
+                            required
+                            value="<%= campgroundID.title %>"
+                        />
+                        <div class="valid-feedback">Champ valide !</div>
                     </div>
-                    <label for="image-<%= i %>">Supprimer ?</label>
-               <% }) %> 
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="price">Prix du camping</label>
-                <div class="input-group">
-                    <span class="input-group-text" id="price-label">€</span>
-                    <input
-                        type="text"
-                        class="form-control"
-                        placeholder="0.00"
-                        aria-label="Prix"
-                        id="price"
-                        aria-describedby="price-label"
-                        name="campground[price]"
-                        required
-                        value="<%= campgroundID.price %>"
-                    />
-                    <div class="valid-feedback">Champ valide</div>
+                    <div class="mb-3">
+                        <label class="form-label" for="location">Localisation</label>
+                        <input
+                            class="form-control"
+                            type="text"
+                            name="campground[location]"
+                            id="title"
+                            placeholder="localisation du camping"
+                            required
+                            value="<%= campgroundID.location %>"
+                        />
+                        <div class="valid-feedback">Champ valide</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="image" class="form-label"
+                            >Ajouter plus d'images</label
+                        >
+                        <input
+                            type="file"
+                            class="form-control"
+                            id="image"
+                            name="image"
+                            multiple
+                        />
+                        <div class="valid-feedback">Champ valide</div>
+                    </div>
+                    <div class="mb-3">
+                        <% campgroundID.images.forEach(function(img, i) { %>
+                        <img src="<%= img.thumbnail %>" class="img-thumbnail" alt=""/>
+                        <div class="form-check-inline">
+                            <input
+                                type="checkbox"
+                                name="deleteImages[]"
+                                id="image-<%= i %>"
+                                value="<%= img.filename %>"
+                            />
+                        </div>
+                        <label for="image-<%= i %>">Supprimer ?</label>
+                        <% }) %>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label" for="price">Prix du camping</label>
+                        <div class="input-group">
+                            <span class="input-group-text" id="price-label">€</span>
+                            <input
+                                type="text"
+                                class="form-control"
+                                placeholder="0.00"
+                                aria-label="Prix"
+                                id="price"
+                                aria-describedby="price-label"
+                                name="campground[price]"
+                                required
+                                value="<%= campgroundID.price %>"
+                            />
+                            <div class="valid-feedback">Champ valide</div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label" for="description">Description</label>
+                        <textarea
+                            class="form-control"
+                            type="text"
+                            name="campground[description]"
+                            id="title"
+                            required
+                            placeholder="description"
+                        >
+                        <%= campgroundID.description %>
+                </textarea
+                        >
+                        <div class="valid-feedback">Champ valide</div>
+                    </div>
+                    <div class="mb-3">
+                        <button class="btn btn-success" type="submit">
+                            Modifier le camping
+                        </button>
+                    </div>
+                </form>
+                <div class="mb-3">
+                    <a class="btn btn-primary" href="/campgrounds">Tous les Camping</a>
+                    <a class="btn btn-primary" href="/campgrounds/<%= campgroundID._id %>"
+                        >Revenir <%= campgroundID.title %>
+                    </a>
                 </div>
             </div>
-
-            <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
-                <textarea
-                    class="form-control"
-                    type="text"
-                    name="campground[description]"
-                    id="title"
-                    required
-                    placeholder="description"
-                >
-                        <%= campgroundID.description %>
-                </textarea>
-                <div class="valid-feedback">Champ valide</div>
-            </div>
-            <div class="mb-3">
-                <button class="btn btn-success" type="submit">Modifier le camping</button>
-            </div>
-        </form>
-        <div class="mb-3">
-            <a href="/campgrounds">Tous les Camping</a>
-            <a class="btn btn-primary" href="/campgrounds/<%= campgroundID._id %>"
-                >Revenir <%= campgroundID.title %>
-            </a>
         </div>
     </div>
 </div>
