--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,7 @@
 <% layout('layouts/boilerplate') -%>
+
+<div id="cluster-map"></div>
 <h1>Tous les campings</h1>
-<div>
-    <a href="/campgrounds/new">Ajouter un Camping</a>
-</div>
 <% campgrounds.forEach((campground) => { %>
 <div class="card mb-3">
     <div class="row">
@@ -33,3 +32,10 @@
     </div>
 </div>
 <% }) %>
+
+<script>
+    const mapToken = `<%-process.env.MAPBOX_TOKEN%>`;
+    const campgrounds = { features: JSON.parse(`<%-JSON.stringify(campgrounds)%>`) };
+</script>
+
+<script src="/js/clusterMap.js"></script>
