--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-6">
-        <div id="map" style="width: 400px; height: 300px"></div>
+        
         <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <% campgroundID.images.forEach((img, i) => { %>
@@ -66,6 +66,7 @@
         </div>
     </div>
     <div class="col-6">
+        <div id="map"></div>
         <% if(currentUser) { %>
         <h2>Laisser un commentaire</h2>
         <form
@@ -167,10 +168,10 @@
     </div>
 </div>
 
-<script defer>
-    const mapToken = '<%-process.env.MAPBOX_TOKEN %>';
-    const campground = '<%-JSON.stringify(campgroundID) %>';
+<script>
+    const mapToken = `<%-process.env.MAPBOX_TOKEN%>`;
+    const campground = `<%-JSON.stringify(campgroundID)%>`;
     const parseCampground = JSON.parse(campground);
 </script>
 
-<script src="/js/showPageMap.js" defer></script>
+<script src="/js/showPageMap.js"></script>
