--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp</title>
-</head>
-<body>
-    <h1>YelpCamp</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- BOOTSTRAP -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"
+            defer
+        ></script>
+        <link rel="stylesheet" href="/css/home.css" />
+        <title>YelpCamp</title>
+    </head>
+    <body class="d-flex text-center text-white bg-dark">
+        <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+            <header class="mb-auto">
+                <div>
+                    <h3 class="float-md-left mb-0">YelpCamp</h3>
+                    <nav class="nav nav-masthead justify-content-center float-md-right">
+                        <a href="#" aria-current="page" class="nav-link active"
+                            >Accueil</a
+                        >
+                        <a href="/campgrounds" class="nav-link">Campings</a>
+                        <% if(!currentUser) { %>
+                        <a class="nav-link" href="/login">Connexion</a>
+                        <a class="nav-link" href="/register">Inscription</a>
+                        <% } else { %>
+                        <a class="nav-link" href="/logout">Déconnexion</a>
+                        <% } %>
+                    </nav>
+                </div>
+            </header>
+            <main class="px-3">
+                <h1>YelpCamp</h1>
+                <p class="lead">
+                    Bienvenue sur YelpCamp ! <br />
+                    Lancez-vous et explorez nos nombreux terrains de camping. <br />
+                    N'hésitez pas à partager les vôtres et à commenter les autres !
+                </p>
+                <a
+                    href="/campgrounds"
+                    class="btn btn-lg btn-secondary fw-bold border-white bg-white"
+                    >Voir les campings</a
+                >
+            </main>
+            <footer class="mt-auto text-white-50">&copy; - 2022 YelpCamp</footer>
+        </div>
+    </body>
 </html>
