--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,9 +17,11 @@
             crossorigin="anonymous"
             defer
         ></script>
-        
+
         <!-- Validation Formulaire -->
         <script src="/js/validateForms.js" defer></script>
+
+        <link rel="stylesheet" href="/css/app.css" />
 
         <!-- MAPBOX -->
         <script src="https://api.mapbox.com/mapbox-gl-js/v2.7.0/mapbox-gl.js"></script>
@@ -32,10 +34,9 @@
     </head>
     <body class="d-flex flex-column vh-100">
         <%- include('../partials/navbars') %>
-        <main class="container mt-5">
+        <main class="container mt-1">
             <%- include('../partials/flash') %> <%- body %>
         </main>
         <%- include('../partials/footer') %>
-        <script></script>
     </body>
 </html>
