correction de petits bugs

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -30,7 +30,7 @@
                             type="text"
                             name="campground[location]"
                             id="title"
-                            placeholder="localisation du camping"
+                            placeholder="Paris, France"
                             required
                         />
                         <div class="valid-feedback">Champ valide !</div>
